# rustaceans_blog

./: .gitignore  Cargo.toml  README.md  Rocket.example.toml
migrations/2022-01-31-195332_init/: up.sql
src/: main.rs  models.rs  schema.rs
templates/: layout.html.hbs
