[package]
name = "myblog"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version="1.8.0" }
rocket = { version="0.5.0-rc.1" }
rocket_dyn_templates = { version="0.1.0-rc.1", features=["handlebars"] }
serde = { version="1.0.126" }
